Refactor internal grammar package, enable annotation-based null analysis