@@ -11,75 +11,72 @@
  */
 package org.eclipse.tm4e.core.internal.grammar;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.tm4e.core.TMException;
+import org.eclipse.tm4e.core.internal.utils.RegexSource;
 import org.eclipse.tm4e.core.theme.IThemeProvider;
 import org.eclipse.tm4e.core.theme.ThemeTrieElementRule;
 
+/**
+ * @see <a href=
+ *      "https://github.com/microsoft/vscode-textmate/blob/9157c7f869219dbaf9a5a5607f099c00fe694a29/src/grammar.ts#L320">
+ *      github.com/Microsoft/vscode-textmate/blob/master/src/grammar.ts</a>
+ */
 final class ScopeMetadataProvider {
 
-	private static final ScopeMetadata _NULL_SCOPE_METADATA = new ScopeMetadata("", 0, StandardTokenType.Other, null);
+	private static final ScopeMetadata NULL_SCOPE_METADATA = new ScopeMetadata("", 0, StandardTokenType.Other, null);
 
 	private static final Pattern STANDARD_TOKEN_TYPE_REGEXP = Pattern.compile("\\b(comment|string|regex)\\b");
 	private static final String COMMENT_TOKEN_TYPE = "comment";
 	private static final String STRING_TOKEN_TYPE = "string";
 	private static final String REGEX_TOKEN_TYPE = "regex";
+	private static final String META_EMBEDDED_TOKEN_TYPE = "meta.embedded";
 
 	private final int initialLanguage;
 	private final IThemeProvider themeProvider;
-	private final Map<String, ScopeMetadata> cache = new HashMap<>();
+	private final Map<String, @Nullable ScopeMetadata> cache = new HashMap<>();
+
 	private ScopeMetadata defaultMetaData;
+
 	private final Map<String, Integer> embeddedLanguages = new HashMap<>();
+
+	@Nullable
 	private Pattern embeddedLanguagesRegex;
 
-	ScopeMetadataProvider(int initialLanguage, IThemeProvider themeProvider,
-			@Nullable Map<String, Integer> embeddedLanguages) {
+	ScopeMetadataProvider(final int initialLanguage, final IThemeProvider themeProvider,
+			@Nullable final Map<String, Integer> embeddedLanguages) {
 		this.initialLanguage = initialLanguage;
 		this.themeProvider = themeProvider;
-		this.onDidChangeTheme();
+		this.defaultMetaData = new ScopeMetadata(
+				"",
+				this.initialLanguage,
+				StandardTokenType.Other,
+				List.of(this.themeProvider.getDefaults()));
 
 		// embeddedLanguages handling
 		if (embeddedLanguages != null) {
-			// If embeddedLanguages are configured, fill in
-			// `this._embeddedLanguages`
-			Set<Entry<String, Integer>> languages = embeddedLanguages.entrySet();
-			for (Entry<String, Integer> language : languages) {
-				String scope = language.getKey();
-				int languageId = language.getValue();
-				/*
-				 * if (typeof language !== 'number' || language === 0) {
-				 * console.warn('Invalid embedded language found at scope ' +
-				 * scope + ': <<' + language + '>>'); // never hurts to be too
-				 * careful continue; }
-				 */
-				this.embeddedLanguages.put(scope, languageId);
-			}
+			// If embeddedLanguages are configured, fill in `this.embeddedLanguages`
+			this.embeddedLanguages.putAll(embeddedLanguages);
 		}
 
 		// create the regex
-		Set<String> escapedScopes = this.embeddedLanguages.keySet().stream()
-				.map(ScopeMetadataProvider::escapeRegExpCharacters)
-				.collect(Collectors.toSet());
+		final var escapedScopes = this.embeddedLanguages.keySet().stream()
+				.map(RegexSource::escapeRegExpCharacters)
+				.collect(Collectors.toList());
 		if (escapedScopes.isEmpty()) {
 			// no scopes registered
 			this.embeddedLanguagesRegex = null;
 		} else {
-			// TODO!!!
-			this.embeddedLanguagesRegex = null;
-			// escapedScopes.sort();
-			// escapedScopes.reverse();
-			// this._embeddedLanguagesRegex = new
-			// RegExp(`^((${escapedScopes.join(')|(')}))($|\\.)`, '');
+			this.embeddedLanguagesRegex = Pattern.compile("^(("
+					+ escapedScopes.stream().sorted(Collections.reverseOrder()).collect(Collectors.joining(")|("))
+					+ "))($|\\.)");
 		}
 	}
 
@@ -89,26 +86,18 @@ final class ScopeMetadataProvider {
 				"",
 				this.initialLanguage,
 				StandardTokenType.Other,
-				Arrays.asList(this.themeProvider.getDefaults()));
+				List.of(this.themeProvider.getDefaults()));
 	}
 
 	ScopeMetadata getDefaultMetadata() {
 		return this.defaultMetaData;
 	}
 
-	/**
-	 * Escapes regular expression characters in a given string
-	 */
-	private static String escapeRegExpCharacters(String value) {
-		// TODO!!!
-		return value; // value.replace(/[\-\\\{\}\*\+\?\|\^\$\.\,\[\]\(\)\#\s]/g, '\\$&');
-	}
-
-	ScopeMetadata getMetadataForScope(String scopeName) {
+	ScopeMetadata getMetadataForScope(@Nullable final String scopeName) {
 		if (scopeName == null) {
-			return ScopeMetadataProvider._NULL_SCOPE_METADATA;
+			return ScopeMetadataProvider.NULL_SCOPE_METADATA;
 		}
-		ScopeMetadata value = this.cache.get(scopeName);
+		var value = this.cache.get(scopeName);
 		if (value != null) {
 			return value;
 		}
@@ -117,51 +106,44 @@ final class ScopeMetadataProvider {
 		return value;
 	}
 
-	private ScopeMetadata doGetMetadataForScope(String scopeName) {
-		int languageId = this.scopeToLanguage(scopeName);
-		int standardTokenType = ScopeMetadataProvider.toStandardTokenType(scopeName);
-		List<ThemeTrieElementRule> themeData = this.themeProvider.themeMatch(scopeName);
+	private ScopeMetadata doGetMetadataForScope(final String scopeName) {
+		final int languageId = this.scopeToLanguage(scopeName);
+		final int standardTokenType = ScopeMetadataProvider.toStandardTokenType(scopeName);
+		final List<ThemeTrieElementRule> themeData = this.themeProvider.themeMatch(scopeName);
 
 		return new ScopeMetadata(scopeName, languageId, standardTokenType, themeData);
 	}
 
 	/**
-	 * Given a produced TM scope, return the language that token describes or
-	 * null if unknown. e.g. source.html => html, source.css.embedded.html =>
-	 * css, punctuation.definition.tag.html => null
+	 * Given a produced TM scope, return the language that token describes or null if unknown.
+	 * e.g. source.html => html, source.css.embedded.html => css, punctuation.definition.tag.html => null
 	 */
-	private int scopeToLanguage(String scope) {
+	private int scopeToLanguage(@Nullable final String scope) {
 		if (scope == null) {
 			return 0;
 		}
-		if (this.embeddedLanguagesRegex == null) {
+
+		final var embeddedLanguagesRegex = this.embeddedLanguagesRegex;
+		if (embeddedLanguagesRegex == null) {
 			// no scopes registered
 			return 0;
 		}
 
-		// TODO!!!!
-
-		/*let m = scope.match(this._embeddedLanguagesRegex);
-		if (!m) {
+		final var m = embeddedLanguagesRegex.matcher(scope);
+		if (!m.find()) {
 			// no scopes matched
 			return 0;
 		}
 
-		let language = this._embeddedLanguages[m[1]] || 0;
-		if (!language) {
-			return 0;
-		}
-
-		return language;*/
-		return 0;
+		return embeddedLanguages.getOrDefault(m.group(1), 0);
 	}
 
-	private static int toStandardTokenType(String tokenType) {
-		Matcher m = STANDARD_TOKEN_TYPE_REGEXP.matcher(tokenType); // tokenType.match(ScopeMetadataProvider.STANDARD_TOKEN_TYPE_REGEXP);
+	private static int toStandardTokenType(final String tokenType) {
+		final var m = STANDARD_TOKEN_TYPE_REGEXP.matcher(tokenType);
 		if (!m.find()) {
 			return StandardTokenType.Other;
 		}
-		String group = m.group();
+		final String group = m.group(1);
 		switch (group) {
 		case COMMENT_TOKEN_TYPE:
 			return StandardTokenType.Comment;
@@ -169,6 +151,8 @@ final class ScopeMetadataProvider {
 			return StandardTokenType.String;
 		case REGEX_TOKEN_TYPE:
 			return StandardTokenType.RegEx;
+		case META_EMBEDDED_TOKEN_TYPE:
+			return StandardTokenType.Other;
 		default:
 			throw new TMException("Unexpected match for standard token type: " + group);
 		}
